0.03
 - Add minimal version of Perl.

0.02 2014-10-17T07:37:27+02:00
 - Fix test dependencies.

0.01 2014-10-13T13:33:17+02:00
 - First version.