@@ -1,5 +1,6 @@
 0.03
  - Add minimal version of Perl.
+ - Update Module::Install to 1.14 version.
 
 0.02 2014-10-17T07:37:27+02:00
  - Fix test dependencies.
